@@ -23,7 +23,7 @@ Bugs fixed:
 - 2974807 Can't have > 2 providers registered for the same classname
 - 2961560 Disallow InvokeMethod calls to internal provider methods
 - 2982924 Use a logging process to write to syslog"
-
+- 2979028 Modify SFCB to not abort for socket errors
 
 Changes in 1.3.7
 ================
